...
        android:background="@drawable/rounded_corners_background"
        android:padding="@dimen/page_button_padding"
        android:text="Notification Center"
        android:textSize="@dimen/page_button_text_size" />

    <Button
        android:id="@+id/inAppNotificationPage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/page_button_height"
        android:layout_marginTop="@dimen/page_button_top_margin"
        android:layout_marginBottom="@dimen/page_button_bottom_margin"
        android:background="@drawable/rounded_corners_background"
        android:padding="@dimen/page_button_padding"
        android:text="@string/in_app_notification_page"
        android:textSize="@dimen/page_button_text_size" />

    <Button
        android:id="@+id/storyPage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/page_button_height"
        android:layout_marginTop="@dimen/page_button_top_margin"
        android:layout_marginBottom="@dimen/page_button_bottom_margin"
        android:background="@drawable/rounded_corners_background"
        android:padding="@dimen/page_button_padding"
...
