<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_story"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:scaleType="centerCrop" />

    <VideoView
        android:id="@+id/video_story_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:contentDescription="@null" />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <View
            android:id="@+id/reverse"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <View
            android:id="@+id/skip"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <ImageView
        android:id="@+id/countdown_end_gif"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:id="@+id/count_down_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/count_down_top_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:gravity="center" />

        <RelativeLayout
            android:id="@+id/countdown_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/rounded_corners_full"
            android:gravity="center"
            android:padding="24dp">

            <TextView
                android:id="@+id/week_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners_full"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:textSize="@dimen/ct_timer_num_size"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/divider1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ct_timer_num_divider_margin"
                android:layout_marginEnd="@dimen/ct_timer_num_divider_margin"
                android:layout_toEndOf="@id/week_num"
                android:textColor="@color/black"
                android:text="@string/colon"
                android:textSize="@dimen/ct_timer_num_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/day_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/divider1"
                android:background="@drawable/rounded_corners_full"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:textColor="@color/black"
                android:textSize="@dimen/ct_timer_num_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/divider2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ct_timer_num_divider_margin"
                android:layout_marginEnd="@dimen/ct_timer_num_divider_margin"
                android:layout_toEndOf="@id/day_num"
                android:textColor="@color/black"
                android:text="@string/colon"
                android:textSize="@dimen/ct_timer_num_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hour_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/divider2"
                android:background="@drawable/rounded_corners_full"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:textColor="@color/black"
                android:textSize="@dimen/ct_timer_num_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/divider3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ct_timer_num_divider_margin"
                android:layout_marginEnd="@dimen/ct_timer_num_divider_margin"
                android:layout_toEndOf="@id/hour_num"
                android:textColor="@color/black"
                android:text="@string/colon"
                android:textSize="@dimen/ct_timer_num_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/minute_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/divider3"
                android:background="@drawable/rounded_corners_full"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:textColor="@color/black"
                android:textSize="@dimen/ct_timer_num_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/divider4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ct_timer_num_divider_margin"
                android:layout_marginEnd="@dimen/ct_timer_num_divider_margin"
                android:layout_toEndOf="@id/minute_num"
                android:textColor="@color/black"
                android:text="@string/colon"
                android:textSize="@dimen/ct_timer_num_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sec_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/divider4"
                android:background="@drawable/rounded_corners_full"
                android:paddingEnd="4dp"
                android:paddingStart="4dp"
                android:textColor="@color/black"
                android:textSize="@dimen/ct_timer_num_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/week_str"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/day_num"
                android:layout_alignStart="@+id/week_num"
                android:textColor="@color/black"
                android:text="@string/week_name"
                android:textSize="@dimen/ct_timer_name_size"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/day_str"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/day_num"
                android:layout_alignStart="@+id/day_num"
                android:layout_toEndOf="@+id/week_str"
                android:textColor="@color/black"
                android:text="@string/day_name"
                android:textSize="@dimen/ct_timer_name_size"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/hour_str"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/day_num"
                android:layout_alignStart="@+id/hour_num"
                android:layout_toEndOf="@+id/day_str"
                android:textColor="@color/black"
                android:text="@string/hour_name"
                android:textSize="@dimen/ct_timer_name_size"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/minute_str"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/day_num"
                android:layout_alignStart="@+id/minute_num"
                android:layout_toEndOf="@+id/hour_str"
                android:textColor="@color/black"
                android:text="@string/minute_name"
                android:textSize="@dimen/ct_timer_name_size"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/sec_str"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/day_num"
                android:layout_alignStart="@+id/sec_num"
                android:layout_toEndOf="@+id/minute_str"
                android:textColor="@color/black"
                android:text="@string/second_name"
                android:textSize="@dimen/ct_timer_name_size"
                android:textStyle="bold"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/count_down_bot_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:gravity="center" />
    </LinearLayout>

    <View
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="bottom" />

    <Button
        android:id="@+id/btn_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_oval_transparent"
        android:padding="5dp" />

    <com.relateddigital.relateddigital_google.inapp.story.StoriesProgressView
        android:id="@+id/stories"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_gravity="top"
        android:layout_marginTop="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_cover"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="4dp" />

        <TextView
            android:id="@+id/tv_cover"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="4dp"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_close_white_24dp"
        app:tint="@color/white" />
</merge>