<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sw"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:orientation="horizontal"
            android:paddingLeft="4.0dip"
            android:paddingTop="5.0dip"
            android:paddingRight="4.0dip"
            android:paddingBottom="1.0dip">

            <EditText
                android:id="@+id/et_story_id"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_margin="2.0dp"
                android:layout_weight="1.0"
                android:textSize="12sp"
                android:autofillHints="@string/story_id_optional"
                android:hint="@string/story_id_optional"
                android:inputType="number"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/btn_show_story"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_margin="2.0dp"
                android:layout_weight="1.0"
                android:background="@drawable/rounded_corners_background"
                android:text="@string/show_story" />

            <Button
                android:id="@+id/btn_clear_story_cache"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_margin="2.0dp"
                android:layout_weight="1.0"
                android:background="@drawable/rounded_corners_background"
                android:text="@string/clear_story_cache"/>

        </LinearLayout>

        <com.relateddigital.relateddigital_google.inapp.story.StoryRecyclerView
            android:id="@+id/vrv_story"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>